--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
     "@angular/platform-browser": "^12.2.5",
     "@angular/platform-browser-dynamic": "^12.2.5",
     "@angular/router": "^12.2.5",
+    "@popperjs/core": "^2.10.2",
+    "bootstrap": "^5.1.3",
     "rxjs": "^7.3.0",
     "tslib": "^2.3.1",
+    "update": "^0.7.4",
     "zone.js": "^0.11.4"
   },
   "scripts": {
